--- a/index.html
+++ b/index.html
@@ -72,8 +72,13 @@
                 'fucking': 'By all that is sacred!',
                 'stupid': 'A person of lamentable ignorance',
                 'you': 'Thou',
+                'bye': 'Farewell, my good fellow. May fortune favor you and the morrow bring you prosperity',
+                 'im': 'Most assuredly, I am departing forthwith',
+                 'blocked': 'Consider yourself most unceremoniously barred from further correspondence.',
                 'bitch': 'A creature of most disagreeable disposition'
             };
+           
+            
 
             function fancify(text) {
                 return text.split(' ').map(word => {
